@@ -1,8 +1,11 @@
 package com.example.jobtracker.service;
 
 import com.example.jobtracker.domain.Note;
+import com.example.jobtracker.domain.User;
 import com.example.jobtracker.dto.NoteDto;
 import com.example.jobtracker.repository.NoteRepository;
+import com.example.jobtracker.repository.UserRepository;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -16,34 +19,52 @@ import org.springframework.data.domain.Sort;
 
 @Service
 public class NoteService {
-    private final NoteRepository repository;
+    private final NoteRepository noteRepository;
+    private final UserRepository userRepository;
 
-
-    public NoteService(NoteRepository repository) {
-        this.repository = repository;
+    public NoteService(NoteRepository noteRepository, UserRepository userRepository) {
+        this.noteRepository = noteRepository;
+        this.userRepository = userRepository;
     }
 
     public void save(NoteDto dto) {
-        Note note = new Note();
-        note.setJobId(dto.getJobId());
-        note.setContent(dto.getContent());
-        note.setCreatedAt(LocalDateTime.now());
+        // ① 获取当前登录的用户名
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
 
-        repository.save(note);
+        // ② 查找数据库中对应的 User 对象
+        User user = userRepository.findByUsername(username).orElseThrow();
+
+        // ③ 创建 Note 实体对象，并设置字段
+        Note note = new Note();
+
+        note.setContent(dto.getContent());       // 设置内容
+        note.setCreatedAt(dto.getCreatedAt());   // 设置时间（如果有）
+        note.setJobId(dto.getJobId());           // 设置关联职位ID（外键）
+
+        // ④ 绑定当前用户
+        note.setUser(user);
+
+        // ⑤ 保存
+        noteRepository.save(note);
     }
 
+
     public List<NoteDto> findByJobId(UUID jobId) {
-        return repository.findByJobId(jobId).stream().map(note -> {
+        // 获取当前登录用户名
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+
+        // 只查当前用户的笔记
+        return noteRepository.findByUserUsernameAndJobId(username, jobId).stream().map(note -> {
             NoteDto dto = new NoteDto();
+
             dto.setJobId(note.getJobId());
-            dto.setContent(note.getContent());
             dto.setCreatedAt(note.getCreatedAt());
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
     public Page<NoteDto> findByJobIdPaged(UUID jobId, int page, int size) {
         PageRequest request = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
-        return repository.findByJobId(jobId, request)
+        return noteRepository.findByJobId(jobId,request)
                 .map(note -> {
                     NoteDto dto = new NoteDto();
                     dto.setJobId(note.getJobId());
@@ -61,13 +82,13 @@ public class NoteService {
             return note;
         }).collect(Collectors.toList());
 
-        repository.saveAll(toSave);
+        noteRepository.saveAll(toSave);
     }
     public void delete(UUID id) {
-        repository.deleteById(id);
+        noteRepository.deleteById(id);
     }
 public void save(Note note) {
-repository.save(note);
+noteRepository.save(note);
 }
 
 }
